Fixed sidebar css bug with lot of items inside (missing overflow)

--- a/app/assets/stylesheets/lato/application.scss
+++ b/app/assets/stylesheets/lato/application.scss
@@ -91,6 +91,7 @@ main, aside {
 
     > div {
       width: 280px;
+      overflow-y: auto;
     }
 
     .aside-open & {
